--- a/MarsCitizens/Tests/MarsCitizens.UnitTests/MarsCitizens.UnitTests.csproj
+++ b/MarsCitizens/Tests/MarsCitizens.UnitTests/MarsCitizens.UnitTests.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="PassingTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CitizensRepositoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
