--- a/MarsCitizens/MarsCitizens/MarsCitizens.csproj
+++ b/MarsCitizens/MarsCitizens/MarsCitizens.csproj
@@ -40,6 +40,7 @@
     </Compile>
     <Compile Include="Contracts\Repository\ICitizensRepository.cs" />
     <Compile Include="Contracts\Services\IDataService.cs" />
+    <Compile Include="Extensions\AspectRatioContainer.cs" />
     <Compile Include="Extensions\Result.cs" />
     <Compile Include="Extensions\ResultExtensions.cs" />
     <Compile Include="Models\Citizien.cs" />
