--- a/MarsCitizens/MarsCitizens/packages.config
+++ b/MarsCitizens/MarsCitizens/packages.config
@@ -6,5 +6,6 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8" />
   <package id="Unity" version="4.0.1" targetFramework="portable45-net45+win8" />
+  <package id="Xam.Plugins.Forms.RoundedBoxView" version="1.0.0.7" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="portable45-net45+win8" />
 </packages>
