--- a/MarsCitizens/MarsCitizens.Droid/Properties/AndroidManifest.xml
+++ b/MarsCitizens/MarsCitizens.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="5" android:versionName="5.1.0" package="com.axsoray.marscitizens">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="MarsCitizens.Droid"></application>
+	<application android:label="Mars Citizens " android:icon="@drawable/icon"></application>
 </manifest>
