--- a/MarsCitizens/MarsCitizens/MarsCitizens.csproj
+++ b/MarsCitizens/MarsCitizens/MarsCitizens.csproj
@@ -43,13 +43,17 @@
     <Compile Include="Extensions\AspectRatioContainer.cs" />
     <Compile Include="Extensions\Result.cs" />
     <Compile Include="Extensions\ResultExtensions.cs" />
-    <Compile Include="Models\Citizien.cs" />
+    <Compile Include="Models\Citizen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CitizensRepository.cs" />
     <Compile Include="Services\DataService.cs" />
     <Compile Include="ViewModelLocator.cs" />
+    <Compile Include="ViewModels\CitizenDetailViewModel.cs" />
     <Compile Include="ViewModels\CitizensViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="Views\CitizenDetailPage.xaml.cs">
+      <DependentUpon>CitizenDetailPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\CitizensPage.xaml.cs">
       <DependentUpon>CitizensPage.xaml</DependentUpon>
     </Compile>
@@ -127,6 +131,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\CitizensPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\CitizenDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
