--- a/MarsCitizens/MarsCitizens/packages.config
+++ b/MarsCitizens/MarsCitizens/packages.config
@@ -9,5 +9,7 @@
   <package id="Refractored.MvvmHelpers" version="1.1.0" targetFramework="portable45-net45+win8" />
   <package id="Unity" version="4.0.1" targetFramework="portable45-net45+win8" />
   <package id="Xam.Plugins.Forms.RoundedBoxView" version="1.0.0.7" targetFramework="portable45-net45+win8" />
+  <package id="Xamarin.FFImageLoading" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.5" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="portable45-net45+win8" />
 </packages>
