--- a/MarsCitizens/MarsCitizens/packages.config
+++ b/MarsCitizens/MarsCitizens/packages.config
@@ -7,7 +7,11 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8" />
   <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8" />
   <package id="Refractored.MvvmHelpers" version="1.1.0" targetFramework="portable45-net45+win8" />
+  <package id="sqlite-net-pcl" version="1.2.1" targetFramework="portable45-net45+win8" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.0" targetFramework="portable45-net45+win8" />
+  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable45-net45+win8" />
   <package id="Unity" version="4.0.1" targetFramework="portable45-net45+win8" />
+  <package id="Xam.Plugins.DownloadManager" version="0.10.1" targetFramework="portable45-net45+win8" />
   <package id="Xam.Plugins.Forms.RoundedBoxView" version="1.0.0.7" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.FFImageLoading" version="2.2.5" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.5" targetFramework="portable45-net45+win8" />
