Download thumbnails on startup.

--- a/MarsCitizens/MarsCitizens/MarsCitizens.csproj
+++ b/MarsCitizens/MarsCitizens/MarsCitizens.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Repositories\PhotoCameraRepository.cs" />
     <Compile Include="Services\CitizenService.cs" />
     <Compile Include="Services\DataService.cs" />
+    <Compile Include="Utils\TaskCompletionNotifier.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModels\CitizenDetailViewModel.cs" />
     <Compile Include="ViewModels\CitizensViewModel.cs" />
